--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Ammu & Soul: The Chase</title>
-    <!-- Tailwind CSS (CDN is fine for simple usage, or use PostCSS in production) -->
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap');
@@ -15,7 +15,7 @@
         width: 100%;
         overflow: hidden; 
         font-family: 'Poppins', sans-serif;
-        touch-action: none; /* Prevents mobile scrolling/zooming */
+        touch-action: none;
         background-color: #0f172a;
       }
       #root { width: 100%; height: 100%; }
